# cloakimg

./: .gitignore  Cargo.toml  README.md
src/: cli.rs  lib.rs  main.rs
src/cli/: encryption.rs  image_io.rs  mod.rs  payload.rs
src/crypto/: aes.rs  chacha20.rs  cipher.rs  mod.rs
src/stego/: decode.rs  encode.rs  mod.rs
